--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "author": "Ramaraj Thangapandi",
   "license": "MIT",
   "dependencies": {
+    "app-info-parser": "^1.1.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1"
