--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "app-info-parser": "^1.1.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
